--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Datasets and APIs
-greeting: Datasets and APIs
-description: mySociety's datasets and data services
+title: OpenDataPhilly
+greeting: OpenDataPhilly
+description: Your source for open data in the Philadelphia region.
 baseurl: ''
 logo: /img/orgs/ms.png
 
@@ -14,8 +14,14 @@ schema: default
 navigation:
   - title: Datasets
     url: /datasets/
-  - title: APIs
-    url: /categories/apis/
+  - title: Organizations
+    url: /organizations/
+  - title: Topics
+    url: /topics/
+  - title: About
+    url: /about/
+  - title: Resources
+    url: /resources/
 
 # Collections
 collections:
@@ -57,15 +63,15 @@ kramdown:
   input: GFM
 
 # Google Analytics
-google_analytics:
-  enabled: true
-  code: "UA-660910-42"
+#google_analytics:
+#  enabled: true
+#  code: "UA-660910-42"
 
 
 # Twitter
-twittercard:
-  enabled: true
-  username: "@mysociety"
+#twittercard:
+#  enabled: true
+#  username: "@mysociety"
 
 # Open Graph
 opengraph:
